--- a/Ecobadge Website/Ecobadge Website/Pages/BusinessProfile.cshtml
+++ b/Ecobadge Website/Ecobadge Website/Pages/BusinessProfile.cshtml
@@ -24,9 +24,9 @@
                 <div class="card w-100 h-100">
                     <img class="card-img-top" id="image" src="https://interactive-examples.mdn.mozilla.net/media/cc0-images/grapefruit-slice-332-332.jpg" alt="Company Image">
                     <div class="card-body">
-                        <h5 class="card-title text-center text-capitalize" id="companyName"></h5>
+                        <h5 class="card-title text-center text-capitalize h1" id="companyName"></h5>
 
-                        <div class="card-body">
+                        <div class="card-body pt-4">
 
                             <div class="row">
                                 <div class="col-6">
@@ -64,23 +64,28 @@
                                 </div>
                             </div>
 
-                            <div class="row">
-
-                                <h3>Contact us:</h3>
-                                <br>
-
-                                <div class="row">
-                                    <div class="col text-center">
-                                        <div id="email"></div>
+                            <div class="row py-4">
+                                <div class="col">
+                                    <div class="row">
+                                        <div class="col text-center">
+                                            <h3>Contact Information</h3>
+                                        </div>
                                     </div>
-                                </div>
 
-                                <div class="row">
-                                    <div class="col text-center">
-                                        <div id="tel"></div>
+                                    <div class="row">
+                                        <div class="col text-center">
+
+                                            <div id="email"></div>
+                                        </div>
                                     </div>
-                                </div>
 
+                                    <div class="row">
+                                        <div class="col text-center">
+                                            <div id="tel"></div>
+                                        </div>
+                                    </div>
+
+                                </div>
                             </div>
 
                             <div class="row p-4">
@@ -97,43 +102,71 @@
         </div>
 
         <div class="col-8 right-col">
+
             <div class="row justify-content-center">
-                <div class="card-deck">
-                    <div class="card">
-                        <div class="card-body">
-                            <h5 class="card-title">Vegan Dishes</h5>
-                            <div class="card-body" id="mh1"></div>
-                        </div>
+
+                <div class="col"> 
+                    <div class="box h-100 p-2">
+
+                        <h4 class="text-center"><u>Biography</u></h4>
+                        <p class="px-3" id="description"></p>
+
                     </div>
 
-                    <div class="card">
-                        <div class="card-body">
-                            <h5 class="card-title">Single-Use Plastic</h5>
-                            <div class="card-body" id="mh2"></div>
-                        </div>
-                    </div>
+                </div>
 
-                    <div class="card">
-                        <div class="card-body">
-                            <h5 class="card-title">Foodwaste Collection Scheme</h5>
-                            <div class="card-body" id="mh3"></div>
-                        </div>
-                    </div>
+                <div class="col">
+                    <div class="tiers-wrapper py-3 pr-3">
+                        <div class="card-deck m-0">
+                            <div class="card">
+                                <div class="card-body d-flex flex-column">
+                                    <div id="score" class="mt-auto mx-auto"></div>
+                                    <div class="mb-auto mx-auto text-muted">out of 100</div>
+                                </div>
+                            </div>
 
-                    <div class="card">
-                        <div class="card-body">
-                            <h5 class="card-title">Locally Sourced Produce</h5>
-                            <div class="card-body" id="mh4"></div>
+                            <div class="card mx-auto d-block">
+                                <img class="card-img-top py-1 px-5" id="tier-image" src="..." alt="ECO Badge Tier" title="...">
+                            </div>
+
                         </div>
                     </div>
                 </div>
             </div>
 
-            
-            <div id="description"></div>
-          
-            <div id="score"></div>
-            <div id="tier"></div>
+
+            <div class="row justify-content-center pt-4">
+                <div class="card-deck">
+                    <div class="card">
+                        <div class="card-body">
+                            <h5 class="card-title text-center">Vegan Dishes</h5>
+                            <div class="card-body text-center" id="mh1"></div>
+                        </div>
+                    </div>
+
+                    <div class="card">
+                        <div class="card-body">
+                            <h5 class="card-title text-center">Single-Use Plastic</h5>
+                            <div class="card-body text-center" id="mh2"></div>
+                        </div>
+                    </div>
+
+                    <div class="card">
+                        <div class="card-body">
+                            <h5 class="card-title text-center">Foodwaste Collection Scheme</h5>
+                            <div class="card-body text-center" id="mh3"></div>
+                        </div>
+                    </div>
+
+                    <div class="card">
+                        <div class="card-body">
+                            <h5 class="card-title text-center">Locally Sourced Produce</h5>
+                            <div class="card-body text-center" id="mh4"></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
 
         </div>
     </div>
@@ -141,6 +174,8 @@
 </div>
 
 <script>
+
+    //<div id="description"></div>
 
     const element = document.getElementById("parent");
     element.classList.remove("container");
@@ -150,7 +185,6 @@
     const urlParams = new URLSearchParams(queryString);
     const companyId = urlParams.get('id');
 
-    console.log(companyId);
     fetchCompanies(companyId);
 
     async function fetchCompanies(id) {
@@ -161,7 +195,7 @@
         const data = await raw.json();
 
         document.getElementById("companyName").innerText = data.companyName;
-        //document.getElementById("image").innerText = data.compImg;
+        //document.getElementById("image").src = data.compImg;
         document.getElementById("description").innerText = data.biography;
 
         document.getElementById("city").innerText = data.cityOrTown;
@@ -174,24 +208,48 @@
         document.getElementById("tel").innerText = data.tel;
 
         document.getElementById("score").innerText = data.companyScore;
-        document.getElementById("tier").innerText = data.ecobadgeTier;
 
-        if(data.veganDishes == true){$("#mh1").append('<i data-feather="check"></i>');}
-        else{ $("#mh1").append('<i data-feather="x"></i>');}
+        if(data.veganDishes == true){$("#mh1").append('<i class="icon-size" data-feather="check"></i>');}
+        else{ $("#mh1").append('<i class="icon-size" data-feather="x"></i>');}
 
-        if(data.singleUsePlastic == true){$("#mh2").append('<i data-feather="check"></i>');}
-        else{ $("#mh2").append('<i data-feather="x"></i>');}
+        if(data.singleUsePlastic == true){$("#mh2").append('<i class="icon-size" data-feather="check"></i>');}
+        else{ $("#mh2").append('<i class="icon-size" data-feather="x"></i>');}
 
-        if(data.foodWasteCollectionScheme == true){$("#mh3").append('<i data-feather="check"></i>');}
-        else{ $("#mh3").append('<i data-feather="x"></i>');}
+        if(data.foodWasteCollectionScheme == true){$("#mh3").append('<i class="icon-size" data-feather="check"></i>');}
+        else{ $("#mh3").append('<i class="icon-size" data-feather="x"></i>');}
 
-        if(data.localProduce == true){$("#mh4").append('<i data-feather="check"></i>');}
-        else{ $("#mh4").append('<i data-feather="x"></i>');}
+        if(data.localProduce == true){$("#mh4").append('<i class="icon-size" data-feather="check"></i>');}
+        else{ $("#mh4").append('<i class="icon-size" data-feather="x"></i>');}
         
         feather.replace();
-        //document.getElementById("mh2").innerText = data.singleUsePlastic;
-        //document.getElementById("mh3").innerText = data.foodWasteCollectionScheme;
-        //document.getElementById("mh4").innerText = data.localProduce;
+
+        if (data.ecobadgeTier == "Bronze") { 
+            var elem = document.getElementById("tier-image");
+            elem.src = "assets/bronze@4x.png";
+            elem.alt = "Bronze";
+            elem.title = "Bronze";
+        }
+
+        if (data.ecobadgeTier == "Silver") { 
+            var elem = document.getElementById("tier-image");
+            elem.src = "assets/silver@4x.png";
+            elem.alt = "Silver";
+            elem.title = "Silver";
+        }
+
+        if (data.ecobadgeTier == "Gold") { 
+            var elem = document.getElementById("tier-image");
+            elem.src = "assets/gold@4x.png";
+            elem.alt = "Gold";
+            elem.title = "Gold";
+        }
+
+        if (data.ecobadgeTier == "Platinum") { 
+            var elem = document.getElementById("tier-image");
+            elem.src = "assets/platinum@4x.png";
+            elem.alt = "Platinum";
+            elem.title = "Platinum";
+        }
     }
 
 </script>
